--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
+    "build": "next build",
     "start": "next start -p 3001",
-    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
